--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "react-scripts": "5.0.1",
         "sass": "^1.57.1",
         "typescript": "^4.9.4",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "@react-buddy/ide-toolbox": "^2.3.1"
     },
     "scripts": {
         "start": "react-scripts start",
