--- a/package.json
+++ b/package.json
@@ -3,21 +3,30 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@react-buddy/ide-toolbox": "^2.3.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
+        "@types/jquery": "^3.5.16",
+        "@types/jqueryui": "^1.12.16",
         "@types/node": "^16.18.11",
         "@types/react": "^18.0.26",
+        "@types/react-dnd": "^3.0.2",
+        "@types/react-dnd-html5-backend": "^3.0.2",
         "@types/react-dom": "^18.0.10",
         "@types/sass": "^1.43.1",
+        "jquery": "^3.6.3",
+        "jquery-ui": "^1.13.2",
+        "jqueryui": "^1.11.1",
         "react": "^18.2.0",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
         "sass": "^1.57.1",
         "typescript": "^4.9.4",
-        "web-vitals": "^2.1.4",
-        "@react-buddy/ide-toolbox": "^2.3.1"
+        "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "react-scripts start",
